package com.mikaservices.platform.common.enums

enum class StatutTache {
    A_FAIRE,
    EN_COURS,
    EN_ATTENTE,
    TERMINEE,
    ANNULEE
}
